--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,11 @@
+<div class="row">
+  <div class="col-xs-6">
+    
 <%= form_for(tasks) do |f| %>
 
 <% if tasks.errors.any? %>
 
-    <div id="error_explanation">
+    <div class="alert alert-warning">
       <ul>
         
 <% tasks.errors.full_messages.each do |message| %>
@@ -14,15 +17,28 @@
   
 <% end %>
 
-<%= f.label :content, 'タスク' %>
-
-<%= f.text_field :content %>
-
+  <div class="form-group">
+    
 <%= f.label :status, 'ステータス' %>
 
-<%= f.text_field :status %>
+    
+<%= f.text_field :status, class: 'form-control' %>
+
+  </div>
+
+  <div class="form-group">
+    
+<%= f.label :content, 'タスク' %>
+
+    
+<%= f.text_field :content, class: 'form-control' %>
+
+  </div>
+
   
-  
-<%= f.submit '投稿' %>
+<%= f.submit '投稿', class: 'btn btn-primary' %>
 
 <% end %>
+
+  </div>
+</div>
