--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,12 +2,29 @@
 <%= @tasks.id %>
  のタスク詳細ページ</h1>
 
-<p>タスク:
-<%= @tasks.content %>
-</p>
-<p>ステータス:
+<table class="table table-bordered">
+  <tr>
+    <th>id</th>
+    <td>
+<%= @tasks.id %>
+</td>
+  </tr>
+  <tr>
+    <th>ステータス</th>
+    <td>
 <%= @tasks.status %>
-</p>
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@tasks) %>
-<%= link_to 'このタスクを削除する', @tasks, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+</td>
+  </tr>
+  <tr>
+    <th>タスク</th>
+    <td>
+<%= @tasks.content %>
+</td>
+  </tr>
+</table>
+
+<%= link_to 'このメッセージを編集する', edit_task_path(@tasks), class: 'btn btn-default' %>
+
+<%= link_to 'このメッセージを削除する', @tasks, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class:'btn btn-danger' %>
+
+
