--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="row">
-  <div class="col-xs-6">
+   <div class="col-xs-12　col-sm-offset-2　col-md-offset-2　col-lg-offset-3">
     
 <%= form_for(tasks) do |f| %>
 
@@ -42,4 +42,19 @@
 <% end %>
 
   </div>
+  
 </div>
+
+<%
+=begin
+%>
+  <div class="row">
+   
+    <div class="col-xs-12">col-xs-12</div>
+    <div class="col-sm-8">col-sm-8</div>
+    <div class="col-md-8">col-md-8</div>
+    <div class="col-lg-6">col-lg-6</div>
+  </div>
+<%
+=end
+%>
